--- a/config.toml
+++ b/config.toml
@@ -401,6 +401,14 @@
     # 评论系统设置
     [params.page.comment]
       enable = false
+      # changyan comment config (https://changyan.kuaizhan.com/)
+      # changyan 评论系统设置 (https://changyan.kuaizhan.com/)
+      [params.page.comment.changyan]
+        enable = false
+        # changyan appid to use Disqus in posts
+        # changyan 的 conf，用来在文章中启用 Disqus 评论系统
+        appid = ""
+        conf = ""
       # Disqus comment config (https://disqus.com/)
       # Disqus 评论系统设置 (https://disqus.com/)
       [params.page.comment.disqus]
